--- a/cms/templates/container.html
+++ b/cms/templates/container.html
@@ -89,7 +89,7 @@ from django.utils.translation import ugettext as _
                                                     <article class="xblock-render xblock-render-elementlevel">Shows Element - Example Video could be here. </article>
                                                 </section>
                                             <li class="xblock-listitem xblock-listitem-elementlevel"</li>
-                                                <section class="xblock-wrapper xblock-wrapper-elementlevel collapsed">
+                                                <section class="xblock-wrapper xblock-type-container xblock-wrapper-elementlevel">
                                                     <header class="xblock-header xblock-header-elementlevel">Element Level Header</header>
                                                     <article class="xblock-render xblock-render-elementlevel">Shows Element - Example Text could be here.</article>
                                                 </section>
