--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -75,7 +75,6 @@ section.xblock-wrapper {
       border-radius: 3px;
       color: $gray-l1;
       min-width: ($baseline*.75);
-      color: $gray-l2;
 
       &:hover {
         background-color: $blue;
@@ -108,6 +107,8 @@ section.xblock-wrapper {
   }
 }
 
+
+
 // xblocks - specific action list styles
 // uses similar styling block as _outline.scss, should be separated or more cleanly inherited (#TODO)
 .xblock-wrapper {
@@ -134,6 +135,14 @@ section.xblock-wrapper {
     &.expand .ui-toggle-expansion {
       @include transform(rotate(-90deg));
       @include transform-origin(50% 50%);
+    }
+  }
+
+  .action-view {
+
+    .action-button-text {
+      padding-left: 0px;
+      padding-right: $baseline/5;
     }
   }
 }
