--- a/cms/templates/container.html
+++ b/cms/templates/container.html
@@ -149,22 +149,10 @@ from django.utils.translation import ugettext as _
                                                         </div>
                                                         <div class="header-actions">
                                                             <ul class="actions-list">
-                                                                <li class="action-item action-edit">
-                                                                    <a href="#" class="edit-button action-button">
-                                                                        <i class="icon-edit"></i>
-                                                                        <span class="action-button-text">${_("Edit")}</span>
-                                                                    </a>
-                                                                </li>
-                                                                <li class="action-item action-duplicate">
-                                                                    <a href="#" data-tooltip="${_("Duplicate")}" class="duplicate-button action-button">
-                                                                        <i class="icon-copy"></i>
-                                                                        <span class="sr">${_("Duplicate this component")}</span>
-                                                                    </a>
-                                                                </li>
-                                                                <li class="action-item action-delete">
-                                                                    <a href="#" data-tooltip="${_("Delete")}" class="delete-button action-button">
-                                                                        <i class="icon-trash"></i>
-                                                                        <span class="sr">${_("Delete this component")}</span>
+                                                                <li class="action-item action-view">
+                                                                    <a href="#" class="action-button">
+                                                                        <span class="action-button-text">${_("View")}</span>
+                                                                        <i class="icon-arrow-right"></i>
                                                                     </a>
                                                                 </li>
                                                             <ul>
