--- a/common/test/test_microsites/test_microsite/templates/footer.html
+++ b/common/test/test_microsites/test_microsite/templates/footer.html
@@ -1,7 +1,7 @@
 ## mako
 <%! from django.core.urlresolvers import reverse %>
 <%! from django.utils.translation import ugettext as _ %>
-<%! from microsite_configuration.middleware import MicrositeConfiguration %>
+<%! from microsite_configuration.microsite import Microsite %>
 
 <%namespace name='static' file='static_content.html'/>
 
