updated unit page styling for xblock-type-containers, enabling container blocks on a unit page to link to their corresponding container page

--- a/cms/static/sass/views/_unit.scss
+++ b/cms/static/sass/views/_unit.scss
@@ -1366,3 +1366,12 @@ body.unit {
 div.wrapper-comp-editor.is-inactive ~ div.launch-latex-compiler{
  display: none;
 }
+
+// ====================
+
+// xblock - unit page container
+
+body.unit .xblock-type-container {
+
+  margin: 0px;
+}
