revert of styling changes and container page changes that somehow disappeared through a git rebase operation.

--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -1,28 +1,28 @@
 // xblocks - default styling
 // ==========================
-// The following is the default styling structure and base for xblocks. Below is is older styling from the unit page, which will be refactored out slowly but is included here for reference of what styling has not yet been 'ported' to the container and xblock styling files.
 
-section.xblock-wrapper {
+// UI: xblock wrapper
+.xblock-wrapper {
   border: 1px solid $gray-l4;
-  margin: $baseline/2;
-  border-radius: $baseline/5;
+  margin: ($baseline/2);
+  border-radius: ($baseline/5);
   background: $white;
-  box-shadow: 0 1px 1px $shadow-l1;
+  box-shadow: 0px 1px 1px $shadow-l1;
 
-  //TODO - account for z-index issues that may steam from video player once container page is editable.
 
   &:hover {
     @include transition(all $tmg-f2 linear 0s);
     box-shadow: 0px 0px 1px $shadow;
   }
 
-  header.xblock-header {
+  // UI: xblock header
+  .xblock-header {
     line-height: $baseline*2.5;
     padding: 0 0 0 $baseline*.75;
     border-bottom: 1px solid $gray-l4;
     border-radius: $baseline/5;
     border-radius: $baseline/5 $baseline/5 0 0;
-    background-color: $blue-l5;
+    background-color: $gray-l6;
 
     .header-details {
       display: inline-block;
@@ -35,33 +35,26 @@ section.xblock-wrapper {
       display: inline-block;
       width: 38%;
       text-align: right;
-
-      //TODO - Add in visibility changes here depending on whether or not xblock is editable.
     }
-
-
   }
 
-  article.xblock-render {
+  .xblock-render {
     @extend %anim-fadeIn;
-  }
-
-  ol.xblock-list {
-    padding-bottom: $baseline/2;
-  }
-
-  li.xblock-listitem {
-    margin-bottom: $baseline;
   }
 }
 
-// xblocks - general action list styles
-// uses similar styling block as _outline.scss, should be separated or more cleanly inherited from general xblocks styling. (#TODO)
+// ====================
+
+// xblocks - calls-to-action
+
+// this section uses similar styling as _outline.scss, should be separated or more cleanly inherited from general xblocks styling.
+
+// UI: general actions list
 .xblock-wrapper {
 
   .actions-list {
     display: inline-block;
-    margin-bottom: 0;
+    margin-bottom: 0px;
   }
 
   .action-item {
@@ -69,7 +62,7 @@ section.xblock-wrapper {
 
     .action-button {
       @include transition(all $tmg-f2 ease-in-out 0s);
-      padding: $baseline/4 $baseline/2;
+      padding: ($baseline/4) ($baseline/2);
       width: auto;
       height: ($baseline*1.5);
       border-radius: 3px;
@@ -81,11 +74,6 @@ section.xblock-wrapper {
         color: $white;
       }
 
-      // TODO - determine outline.scss's use of this property.
-      &.is-set {
-        visibility: visible;
-      }
-
       .action-button-text {
         padding-left: 1px;
         text-transform: uppercase;
@@ -94,29 +82,20 @@ section.xblock-wrapper {
       &.delete-button:hover {
         background-color: $gray-l1;
       }
-
-      // TODO - determine outline.scss's use of this property.
-      //reset old drag handle style
-      &.drag-handle {
-        float: none;
-        margin: 0;
-        background: transparent url(../img/drag-handles.png) right 5px no-repeat;
-        text-align: center;
-      }
     }
   }
 }
 
+// UI: xblock is expandable and collapsible
 
+// this section uses similar styling block as _outline.scss, should be separated or more cleanly inherited
+.xblock-wrapper.is-collapsible {
 
-// xblocks - specific action list styles
-// uses similar styling block as _outline.scss, should be separated or more cleanly inherited (#TODO)
-.xblock-wrapper {
   .expand-collapse {
     @include transition(all $tmg-f2 linear 0s);
     display: inline-block;
     vertical-align: top;
-    margin: 0 ($baseline/4);
+    margin: 0px ($baseline/4);
     color: $gray-l2;
 
     &:hover {
@@ -136,6 +115,10 @@ section.xblock-wrapper {
       @include transform(rotate(-90deg));
       @include transform-origin(50% 50%);
     }
+  }
+
+  &.collapsed .xblock-render {
+    display: none !important;
   }
 
   .action-view {
