--- a/cms/static/sass/_base.scss
+++ b/cms/static/sass/_base.scss
@@ -56,7 +56,7 @@ h1 {
   font-weight: 600;
   color: $gray-d3;
 
-  .navigation, .navigation-divider, .subtitle {
+  .navigation, .subtitle {
     @extend %t-title7;
     position: relative;
     top: ($baseline/4);
@@ -327,6 +327,20 @@ p, ul, ol, dl {
     // layout with navigation
     &.has-navigation {
 
+      .navigation-link:before {
+        content: " / ";
+        margin: ($baseline/4);
+        color: inherit;
+
+        &:hover {
+          color: inherit;
+        }
+      }
+
+      .nav-actions {
+        bottom: -($baseline*1.5);
+      }
+
       .navigation .navigation-link:first-child:before {
         content: "";
         margin: 0px;
@@ -355,20 +369,6 @@ p, ul, ol, dl {
             color: $gray;
           }
         }
-      }
-
-      .navigation-link:before {
-          content: " / ";
-          margin: $baseline/4 $baseline/4;
-          color: inherit;
-
-          &:hover {
-            color: inherit;
-          }
-        }
-
-      .nav-actions {
-        bottom: -($baseline*1.5);
       }
     }
   }
