--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -17,11 +17,11 @@
 
   // UI: xblock header
   .xblock-header {
-    line-height: $baseline*2.5;
-    padding: 0 0 0 $baseline*.75;
+    line-height: ($baseline*2.5);
+    padding: 0 0 0 ($baseline*.75);
     border-bottom: 1px solid $gray-l4;
-    border-radius: $baseline/5;
-    border-radius: $baseline/5 $baseline/5 0 0;
+    border-radius: ($baseline/5);
+    border-radius: ($baseline/5) ($baseline/5) 0 0;
     background-color: $gray-l6;
 
     .header-details {
@@ -54,7 +54,7 @@
 
   .actions-list {
     display: inline-block;
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 
   .action-item {
@@ -95,7 +95,7 @@
     @include transition(all $tmg-f2 linear 0s);
     display: inline-block;
     vertical-align: top;
-    margin: 0px ($baseline/4);
+    margin: 0 ($baseline/4);
     color: $gray-l2;
 
     &:hover {
@@ -124,8 +124,8 @@
   .action-view {
 
     .action-button-text {
-      padding-left: 0px;
-      padding-right: $baseline/5;
+      padding-left: 0;
+      padding-right: ($baseline/5);
     }
   }
 }
