--- a/cms/static/sass/views/_container.scss
+++ b/cms/static/sass/views/_container.scss
@@ -47,15 +47,16 @@ body.view-container {
     }
   }
 
-  // UI: xBlock Nesting Level
+  // UI: xBlock Nesting Levelnesting
+
   .xblock-wrapper-nestinglevel {
-    margin: $baseline/2;
+    margin: ($baseline/2);
     border: none;
     padding-bottom: ($baseline/2);
     box-shadow: none;
 
     &:hover {
-      background-color: $gray-l6;
+      background-color: $gray-l7;
       box-shadow: 0 0 1px $shadow-d2 inset;
     }
 
@@ -72,7 +73,7 @@ body.view-container {
     }
   }
 
-  // UI: xBlock Element Level 
+  // UI: xBlock Element Level
   .xblock-wrapper-elementlevel {
     margin: 0 ($baseline*2) $baseline ($baseline*2);
     border-radius: ($baseline/4);
