response to comments

--- a/lms/templates/combinedopenended/open_ended_result_table.html
+++ b/lms/templates/combinedopenended/open_ended_result_table.html
@@ -19,6 +19,10 @@
                 %if len(co['feedback'])>2:
                     <div class="collapsible evaluation-response">
                         <header>
+                            ## Translators: "See full feedback" is the text of
+                            ## a link that allows a user to see more detailed
+                            ## feedback from a self, peer, or instructor
+                            ## graded openended problem
                             <a href="#" class="see-full-feedback">${_("See full feedback")}</a>
                         </header>
                         <section class="feedback-full">
@@ -33,6 +37,9 @@
                     <input type="hidden" value="${co['submission_id']}" class="submission_id" />
                     <div class="collapsible evaluation-response">
                         <header>
+                            ## Translators: this text forms a link that, when
+                            ## clicked, allows a user to respond to the feedback
+                            ## the user recieved on his or her openended problem
                             <a href="#" class="respond-to-feedback">${_("Respond to Feedback")}</a>
                         </header>
                         <section id="evaluation" class="evaluation">
