--- a/lms/templates/combinedopenended/openended/open_ended_evaluation.html
+++ b/lms/templates/combinedopenended/openended/open_ended_evaluation.html
@@ -3,6 +3,9 @@
     ${msg|n}
     <div class="collapsible evaluation-response">
         <header>
+            ## Translators: when "Respond to Feedback" is clicked, a survey
+            ## appears on which a user can respond to the feedback the user
+            ## recieved on an openended problem
             <a href="#" class="respond-to-feedback">${_("Respond to Feedback")}</a>
         </header>
         <section id="evaluation_${id}" class="evaluation">
