--- a/lms/templates/combinedopenended/combined_open_ended_results.html
+++ b/lms/templates/combinedopenended/combined_open_ended_results.html
@@ -25,6 +25,14 @@
                             % endif
                         ><i class="icon-chevron-left"></i></button>
                     % endif 
+                    ## Translators: an example of what this string will look
+                    ## like is: "Scored rubric from grader 1", where
+                    ## "Scored rubric" replaces {result_of_task} and
+                    ## "1" replaces {number}.
+                    ## This string appears when a user is viewing one of
+                    ## their graded rubrics for an openended response problem.
+                    ## the number distinguishes between the different
+                    ## graded rubrics the user might have received
                     ${_("{result_of_task} from grader {number}").format(result_of_task = result['task_name'], number = i + 1)}
                     % if num_results>1:
                         <button href="#" alt="Next" class="rubric-button rubric-next-button"
