--- a/cms/templates/ux/reference/container.html
+++ b/cms/templates/ux/reference/container.html
@@ -55,10 +55,10 @@ from django.utils.translation import ugettext as _
                     <article class="xblock-render">
                         <ol class="xblock-list">
                             <li class="xblock-listitem">
-                                <section class="xblock-wrapper xblock-wrapper-nestinglevel">
+                                <section class="xblock-wrapper xblock-wrapper-nestinglevel is-collapsible">
                                     <header class="xblock-header">
                                         <div class="header-details">
-                                            <a href="#" data-tooltip="Expand or Collapse" class="action expand-collapse expand">
+                                            <a href="#" data-tooltip="Expand or Collapse" class="action expand-collapse collapse">
                                                 <i class="icon-caret-down ui-toggle-expansion"></i>
                                                 <span class="sr">Expand or Collapse</span>
                                             </a>
@@ -111,7 +111,7 @@ from django.utils.translation import ugettext as _
                                                                 <div class="focus_grabber first" tabindex="-1"></div>
 
                                                                 <div class="tc-wrapper">
-                                                                    <a href="#before-transcript_i4x-AndyA-ABT101-video-72b5a0d74e8c4ed4a4d4e6bf67837c09" class="nav-skip sr">Skip to a navigable version of this video's transcript.</a>
+                                                                    <a href="#before-transcript_i4x-AndyA-ABT101-video-72b5a0d74e8c4ed4a4d4e6bf67837c09" class="nav-skip sr">Skip to a navigable version of this video transcript.</a>
 
                                                                     <article class="video-wrapper">
                                                                         <span tabindex="-1" class="spinner" aria-hidden="true" aria-label="Loading video player"></span>
@@ -224,10 +224,10 @@ from django.utils.translation import ugettext as _
                                 </section>
                             </li>
                             <li class="xblock-listitem xblock-listitem">
-                                <section class="xblock-wrapper xblock-wrapper-nestinglevel">
+                                <section class="xblock-wrapper xblock-wrapper-nestinglevel is-collapsible">
                                     <header class="xblock-header">
                                         <div class="header-details">
-                                            <a href="#" data-tooltip="Expand or Collapse" class="action expand-collapse expand">
+                                            <a href="#" data-tooltip="Expand or Collapse" class="action expand-collapse collapse">
                                                 <i class="icon-caret-down ui-toggle-expansion"></i>
                                                 <span class="sr">Expand or Collapse</span>
                                             </a>
