removed extra unit page styling from container, ensured proper container styling on unit page, addressed styling reuse for action lists, cleaned up todo comments

--- a/cms/static/sass/style-app-extend1.scss
+++ b/cms/static/sass/style-app-extend1.scss
@@ -27,7 +27,7 @@
 @import 'elements/typography';
 @import 'elements/icons'; // references to icons used
 @import 'elements/controls'; // buttons, link styles, sliders, etc.
-@import 'elements/xblocks'; // xblock default styling
+@import 'elements/xblocks'; //  studio authoring chrome for xblocks
 
 // base - specific views
 @import 'views/account';
