--- a/cms/templates/ux/reference/container.html
+++ b/cms/templates/ux/reference/container.html
@@ -54,7 +54,7 @@ from django.utils.translation import ugettext as _
                     </header>
                     <article class="xblock-render">
                         <ol class="xblock-list">
-                            <li class="xblock-listitem">
+                            <li class="xblock-list-item">
                                 <section class="xblock-wrapper xblock-wrapper-nestinglevel is-collapsible">
                                     <header class="xblock-header">
                                         <div class="header-details">
@@ -72,7 +72,7 @@ from django.utils.translation import ugettext as _
                                     </header>
                                     <article class="xblock-render">
                                         <ol class="xblock-list">
-                                            <li class="xblock-listitem">
+                                            <li class="xblock-list-item">
                                                 <section class="xblock-wrapper xblock-wrapper-elementlevel">
                                                     <header class="xblock-header">
                                                         <div class="header-details">
@@ -168,7 +168,7 @@ from django.utils.translation import ugettext as _
                                                         </section>
                                                     </article>
                                                 </section>
-                                            </li><li class="xblock-listitem">
+                                            </li><li class="xblock-list-item">
                                             <section class="xblock-wrapper xblock-type-container xblock-wrapper-elementlevel">
                                                 <header class="xblock-header">
                                                     <div class="header-details">
@@ -187,7 +187,7 @@ from django.utils.translation import ugettext as _
                                                 </header>
                                                 <article class="xblock-render">Shows Element - Example Randomize Block could be here.</article>
                                             </section>
-                                        </li><li class="xblock-listitem">
+                                        </li><li class="xblock-list-item">
                                             <section class="xblock-wrapper xblock-wrapper-elementlevel">
                                                 <header class="xblock-header">
                                                     <div class="header-details">
@@ -223,7 +223,7 @@ from django.utils.translation import ugettext as _
                                     </article>
                                 </section>
                             </li>
-                            <li class="xblock-listitem xblock-listitem">
+                            <li class="xblock-list-item xblock-list-item">
                                 <section class="xblock-wrapper xblock-wrapper-nestinglevel is-collapsible">
                                     <header class="xblock-header">
                                         <div class="header-details">
@@ -241,7 +241,7 @@ from django.utils.translation import ugettext as _
                                     </header>
                                     <article class="xblock-render">
                                         <ol class="xblock-list">
-                                            <li class="xblock-listitem">
+                                            <li class="xblock-list-item">
                                                 <section class="xblock-wrapper xblock-wrapper-elementlevel">
                                                     <header class="xblock-header">
                                                         <div class="header-details">
@@ -272,7 +272,7 @@ from django.utils.translation import ugettext as _
                                                     </header>
                                                     <article class="xblock-render" >Shows Element - Example Video could be here. </article>
                                                 </section>
-                                            </li><li class="xblock-listitem">
+                                            </li><li class="xblock-list-item">
                                             <section class="xblock-wrapper xblock-wrapper-elementlevel">
                                                 <header class="xblock-header">
                                                     <div class="header-details">
@@ -362,7 +362,7 @@ from django.utils.translation import ugettext as _
                                                     </section>
                                                 </article>
                                             </section>
-                                        </li><li class="xblock-listitem">
+                                        </li><li class="xblock-list-item">
                                             <section class="xblock-wrapper xblock-wrapper-elementlevel">
                                                 <header class="xblock-header">
                                                     <div class="header-details">
