--- a/cms/templates/ux/reference/unit.html
+++ b/cms/templates/ux/reference/unit.html
@@ -374,7 +374,7 @@ from django.utils.translation import ugettext as _
 
 
 </li>
-<li class="xblock-listitem">
+<li class="xblock-list-item">
     <section class="xblock-wrapper xblock-type-container xblock-wrapper-elementlevel">
         <header class="xblock-header">
             <div class="header-details">
@@ -383,7 +383,7 @@ from django.utils.translation import ugettext as _
             <div class="header-actions">
                 <ul class="actions-list">
                     <li class="action-item action-view">
-                        <a href="#" class="action-button">
+                        <a href="container.html" class="action-button">
                             <span class="action-button-text">View</span>
                             <i class="icon-arrow-right"></i>
                         </a>
