--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -9,7 +9,6 @@
   background: $white;
   box-shadow: 0px 1px 1px $shadow-l1;
 
-
   &:hover {
     box-shadow: 0 0 1px $shadow;
   }
@@ -23,7 +22,6 @@
     min-height: ($baseline*2.5);
     background-color: $gray-l6;
     align-items: center;
-
 
     .header-details {
       @extend %cont-truncated;
@@ -49,74 +47,16 @@
 }
 
 // UI: xblocks - calls-to-action
-// --------------------
-// TODO: this section uses similar styling as _outline.scss, should be separated or more cleanly inherited from general xblocks styling.
-
-.xblock-wrapper {
-
-  .actions-list {
-    display: inline-block;
-    margin-bottom: 0;
-  }
-
-  .action-item {
-    display: inline-block;
-
-    .action-button {
-      @include transition(all $tmg-f2 ease-in-out 0s);
-      border-radius: 3px;
-      padding: ($baseline/4) ($baseline/2);
-      min-width: ($baseline*.75);
-      width: auto;
-      height: ($baseline*1.5);
-      color: $gray-l1;
-
-      &:hover {
-        background-color: $blue;
-        color: $white;
-      }
-
-      .action-button-text {
-        padding-left: 1px;
-        text-transform: uppercase;
-      }
-
-      &.delete-button:hover {
-        background-color: $gray-l1;
-      }
-    }
-  }
+.xblock-wrapper .header-actions {
+  @extend %actions-header;
 }
 
-// UI: xblock is expandable and collapsible
-// --------------------
-// TODO: this section uses similar styling block as _outline.scss, should be separated or more cleanly inherited
+// UI: xblock is collapsible
 .xblock-wrapper.is-collapsible {
 
   .expand-collapse {
-    @include transition(all $tmg-f2 linear 0s);
-    display: inline-block;
+    @extend %expand-collapse;
     margin: 0 ($baseline/4);
-    color: $gray-l2;
-    vertical-align: top;
-
-    &:hover {
-      color: $blue;
-    }
-
-    .ui-toggle-expansion {
-      @include transition(all $tmg-f2 ease-in-out 0s);
-      @include font-size(18);
-      display: inline-block;
-      margin-right: ($baseline/4);
-      color: $gray-l3;
-      vertical-align: middle;
-    }
-
-    &.expand .ui-toggle-expansion {
-      @include transform(rotate(-90deg));
-      @include transform-origin(50% 50%);
-    }
   }
 
   &.collapsed .xblock-render {
